# pentagram

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  FAQ  Makefile.in  Makefile.macosx  Makefile.mingw  README  acinclude.m4  bootstrap  common.mk  configure.ac  configure.in  genrules.pl  llc.cpp  mkinstalldirs  module.mk  objects.mk  pentagram.cpp
audio/: AudioChannel.cpp  AudioChannel.h  AudioMixer.cpp  AudioMixer.h  AudioProcess.cpp  AudioProcess.h  AudioSample.cpp  AudioSample.h  MusicFlex.cpp  MusicFlex.h  MusicProcess.cpp  MusicProcess.h  RawAudioSample.cpp  RawAudioSample.h  SonarcAudioSample.cpp  SonarcAudioSample.h  SoundFlex.cpp  SoundFlex.h  SpeechFlex.cpp  SpeechFlex.h  module.mk
audio/midi/: ALSAMidiDriver.cpp  ALSAMidiDriver.h  CoreAudioMidiDriver.cpp  CoreAudioMidiDriver.h  CoreMidiDriver.cpp  CoreMidiDriver.h  FMOplMidiDriver.cpp  FMOplMidiDriver.h  FluidSynthMidiDriver.cpp  FluidSynthMidiDriver.h  LowLevelMidiDriver.cpp  LowLevelMidiDriver.h  MidiDriver.cpp  MidiDriver.h  TimidityMidiDriver.cpp  TimidityMidiDriver.h  UnixSeqMidiDriver.cpp  UnixSeqMidiDriver.h  WindowsMidiDriver.cpp  WindowsMidiDriver.h  XMidiEventList.cpp  XMidiEventList.h  fmopl.h  (+7 more)
conf/: ConfigFileManager.cpp  ConfigFileManager.h  ConfigNode.h  Configuration.cpp  Configuration.h  INIFile.cpp  INIFile.h  SettingManager.cpp  SettingManager.h  XMLNode.cpp  XMLNode.h  XMLTree.cpp  XMLTree.h  module.mk
convert/: Convert.h  ConvertShape.cpp  ConvertShape.h  module.mk
data/: .cvsignore  fixedfont.cfg  module.mk  pentagram.icns  u8.ini  u8armour.cfg  u8bindings.cfg  u8bindings.ini  u8french.ini  u8german.ini  u8japanese.ini  u8monsters.cfg  u8monsters.ini  u8spanish.ini  u8weapons.cfg  u8weapons.ini
docs/: cvs_structure.txt  features.txt  maps.txt  musiceggs.txt  musicflx.txt  savegame.txt  shapes.cmp.txt  snippets.txt  u8anim.txt  u8bugs.txt  u8cheat.txt  u8encoding.txt  u8fonts.txt  u8gfxfmt.txt  u8mapfmt.txt  u8npc.txt  u8savfmt.txt  u8sfxfmt.txt  u8skf.txt  u8typeflag.txt  u8usecode.txt  u8weapon.txt  u8wpnovlay.txt
filesys/: Archive.cpp  Archive.h  ArchiveFile.cpp  ArchiveFile.h  DirFile.cpp  DirFile.h  FileSystem.cpp  FileSystem.h  Flex.cpp  Flex.h  FlexFile.cpp  FlexFile.h  IDataSource.h  ListFiles.h  NamedArchiveFile.h  NamedFlex.h  ODataSource.h  OutputLogger.cpp  OutputLogger.h  RawArchive.cpp  RawArchive.h  Savegame.cpp  Savegame.h  SavegameWriter.cpp  SavegameWriter.h  U8Save.cpp  U8Save.h  U8SaveFile.cpp  U8SaveFile.h  ZipFile.cpp  ZipFile.h  data.cpp  module.mk
games/: Game.cpp  Game.h  GameData.cpp  GameData.h  GameDetector.cpp  GameDetector.h  GameInfo.cpp  GameInfo.h  RemorseGame.cpp  RemorseGame.h  StartU8Process.cpp  StartU8Process.h  TreasureLoader.cpp  TreasureLoader.h  U8Game.cpp  U8Game.h  gamemd5.h  module.mk  stdbindings.cpp  stdbindings.h  u8bindings.cpp  u8bindings.h
graphics/: AnimDat.cpp  AnimDat.h  BaseSoftRenderSurface.cpp  BaseSoftRenderSurface.h  Font.cpp  Font.h  FontShapeFlex.cpp  FontShapeFlex.h  FrameID.cpp  FrameID.h  GraphicsErrors.h  GumpShapeArchive.cpp  GumpShapeArchive.h  GumpShapeFlex.cpp  GumpShapeFlex.h  InverterProcess.cpp  InverterProcess.h  MD3_Model.cpp  MD3_Model.h  MainShapeArchive.cpp  MainShapeArchive.h  MainShapeFlex.cpp  MainShapeFlex.h  Manips.h  PNGWriter.cpp  PNGWriter.h  Palette.cpp  Palette.h  PaletteFaderProcess.cpp  PaletteFaderProcess.h  PaletteManager.cpp  PaletteManager.h  RenderSurface.cpp  RenderSurface.h  SKFPlayer.cpp  SKFPlayer.h  Scaler.h  ScalerManager.cpp  ScalerManager.h  Shape.cpp  (+27 more)
gumps/: AskGump.cpp  AskGump.h  BarkGump.cpp  BarkGump.h  BindGump.cpp  BindGump.h  BookGump.cpp  BookGump.h  ConsoleGump.cpp  ConsoleGump.h  ContainerGump.cpp  ContainerGump.h  ControlsGump.cpp  ControlsGump.h  CreditsGump.cpp  CreditsGump.h  DesktopGump.cpp  DesktopGump.h  FastAreaVisGump.cpp  FastAreaVisGump.h  GameMapGump.cpp  GameMapGump.h  Gump.cpp  Gump.h  GumpNotifyProcess.cpp  GumpNotifyProcess.h  InverterGump.cpp  InverterGump.h  ItemRelativeGump.cpp  ItemRelativeGump.h  MainMenuProcess.cpp  MainMenuProcess.h  MenuGump.cpp  MenuGump.h  MessageBoxGump.cpp  MessageBoxGump.h  MiniMapGump.cpp  MiniMapGump.h  MiniStatsGump.cpp  MiniStatsGump.h  (+31 more)
kernel/: Allocator.cpp  Allocator.h  Application.cpp  Application.h  ConApp.cpp  ConApp.h  CoreApp.cpp  CoreApp.h  DelayProcess.cpp  DelayProcess.h  GUIApp.cpp  GUIApp.h  GameData.cpp  GameData.h  GameDetector.cpp  GameInfo.h  HIDBinding.h  HIDKeys.cpp  HIDKeys.h  HIDManager.cpp  HIDManager.h  Joystick.cpp  Joystick.h  Kernel.cpp  Kernel.h  MemoryManager.cpp  MemoryManager.h  Mouse.cpp  Mouse.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  Pool.cpp  Pool.h  Process.cpp  Process.h  SegmentedAllocator.cpp  SegmentedAllocator.h  SegmentedPool.cpp  (+8 more)
misc/: .cvsignore  Args.cpp  Args.h  Box.h  Console.cpp  Console.h  Direction.h  Errors.h  Q_strcasecmp.cpp  Q_strcasecmp.h  Rect.h  args.cc  args.h  common_types.h  encoding.cpp  encoding.h  exceptions.h  idMan.cpp  idMan.h  istring.cpp  istring.h  md5.cpp  md5.h  memset_n.h  module.mk  p_dynamic_cast.h  pent_include.cpp  pent_include.h  pent_valgrind.h  util.cpp  util.h  version.cpp  version.h
system/: module.mk
tools/: Makefile  module.mk
usecode/: BitSet.cpp  BitSet.h  UCList.cpp  UCList.h  UCMachine.cpp  UCMachine.h  UCProcess.cpp  UCProcess.h  UCStack.cpp  UCStack.h  Usecode.cpp  Usecode.h  UsecodeFlex.cpp  UsecodeFlex.h  intrinsics.h  module.mk  remorseintrinsics.h  u8intrinsics.h
win32/: Pentagram.iss
world/: ArmourInfo.h  CameraProcess.cpp  CameraProcess.h  Container.cpp  Container.h  CreateItemProcess.cpp  CreateItemProcess.h  CurrentMap.cpp  CurrentMap.h  DestroyItemProcess.cpp  DestroyItemProcess.h  Egg.cpp  Egg.h  EggHatcherProcess.cpp  EggHatcherProcess.h  FireballProcess.cpp  FireballProcess.h  Glob.cpp  Glob.h  GlobEgg.cpp  GlobEgg.h  GravityProcess.cpp  GravityProcess.h  Item.cpp  Item.h  ItemFactory.cpp  ItemFactory.h  ItemMoveProcess.cpp  ItemMoveProcess.h  ItemSorter.cpp  ItemSorter.h  LoopScript.h  Map.cpp  Map.h  MapGlob.cpp  MapGlob.h  MissileProcess.cpp  MissileProcess.h  MissileTracker.cpp  MissileTracker.h  (+15 more)
(+301 files in other folders)
